--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -56,6 +56,7 @@
   "expenses_modal": {
     "add_title": "Add expense",
     "name": "Name",
+    "description": "Description",
     "name_placeholder": "Name of an expense",
     "date": "Date",
     "date_placeholder": "Click to choose",
