--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -56,6 +56,7 @@
   "expenses_modal": {
     "add_title": "Dodaj wydatek",
     "name": "Nazwa",
+    "description": "Komentarz",
     "name_placeholder": "Nazwa wydatku",
     "date": "Data",
     "date_placeholder": "Kliknij by wybrać",
