--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -79,6 +79,7 @@
     "title": "Lista zakupów",
     "add_list": "Dodaj nową listę",
     "add_item": "Dodaj nowy element",
+    "sum_up": "Podsumuj zakupy",
     "delete_list": "Usuń listę",
     "confirmation": "Czy na pewno chcesz usunąć obiekt ",
     "add_message": "Nazwij swoją listę:",
